add clerk middleware for huma
