# api/openapi.yaml
@@ -82,9 +82,10 @@ info:
   version: 1.0.0
 openapi: 3.1.0
 paths:
-  /greeting/{name}:
+  /greeting/protected/{name}:
     get:
-      operationId: get-greeting-by-name
+      description: Protected version of greet
+      operationId: protected-greet
       parameters:
         - description: Name to greet
           example: world
@@ -110,5 +111,41 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
-      summary: Get greeting by name
+      security:
+        - BearerAuth: []
+      summary: Get a protected greeting
+      tags:
+        - Greetings
+  /greeting/public/{name}:
+    get:
+      description: Get a greeting for a person by name.
+      operationId: get-greeting
+      parameters:
+        - description: Name to greet
+          example: world
+          in: path
+          name: name
+          required: true
+          schema:
+            description: Name to greet
+            examples:
+              - world
+            maxLength: 30
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GreetingOutputBody"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Get a greeting
+      tags:
+        - Greetings
 
